moved about button into own component need to work on about conent hoping to put it in a modal

--- a/DynamicDashboardD3/src/app/about/about.component.html
+++ b/DynamicDashboardD3/src/app/about/about.component.html
@@ -1,3 +1,4 @@
-<p>
-  about works!
-</p>
+<div class="about-button">
+  <div class="about-name">Joel C. Rainear-Wills</div>
+  <div><img src="https://www.gravatar.com/avatar/36451f5c44ef99ae4d652b790763bfbd?s=36"></div>
+</div>
