--- a/DynamicDashboardD3/src/app/about/about.component.html
+++ b/DynamicDashboardD3/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="about-button">
+<div class="about-button" (click)="open()">
   <div class="about-name">Joel C. Rainear-Wills</div>
   <div><img src="https://www.gravatar.com/avatar/36451f5c44ef99ae4d652b790763bfbd?s=36"></div>
 </div>
