--- a/DynamicDashboardD3/src/styles.scss
+++ b/DynamicDashboardD3/src/styles.scss
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
-body{
-    font-family: sans-serif;   
-    letter-spacing: 2px; 
+body{    
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
