--- a/DynamicDashboardD3/src/app/app.component.html
+++ b/DynamicDashboardD3/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="app-header">
+    <div class="header-logo">
+        <img [src]="gravatarUrl"/>
+        <label>J. Rainear-Wills</label>
+    </div>
     <div class="header-menu">
         <ul>
             <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
