--- a/DynamicDashboardD3/src/styles.scss
+++ b/DynamicDashboardD3/src/styles.scss
@@ -1,7 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+/*imports*/
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import './variables.scss';
 
+/*global styles*/
 body{    
+    background-color: $blueish-white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
