--- a/DynamicDashboardD3/src/app/app.component.html
+++ b/DynamicDashboardD3/src/app/app.component.html
@@ -4,10 +4,19 @@
             <img [src]="gravatarUrl" />
             <label>J. Rainear-Wills</label>
         </div>
-        <div class="header-menu">
+        <div class="header-menu-lg">
             <ul>
                 <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
             </ul>
         </div>
+        <div class="hamburger-menu" (click)="hamburgerMenuClicked = !hamburgerMenuClicked"><span class="fa fa-bars"></span></div>
     </div>
+    <div class="header-menu-sm" [ngClass]="{'visible': hamburgerMenuClicked }">
+        <ul>
+            <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
+        </ul>
+    </div>
+</div>
+<div class="app-body" [style.height.px]="appBodyHeight">
+    <!--<router-outlet></router-outlet>-->
 </div>
