--- a/DynamicDashboardD3/src/app/app.component.html
+++ b/DynamicDashboardD3/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="header-container">
         <div class="header-logo">
             <img [src]="gravatarUrl" />
-            <label>J. Rainear-Wills</label>
+            <label>Joel Rainear-Wills</label>
         </div>
         <div class="header-menu-lg">
             <ul>
@@ -11,7 +11,7 @@
         </div>
         <div class="hamburger-menu" (click)="hamburgerMenuClicked = !hamburgerMenuClicked"><span class="fa fa-bars"></span></div>
     </div>
-    <div class="header-menu-sm" [ngClass]="{'visible': hamburgerMenuClicked }">
+    <div class="header-menu-sm" [style.height.px]="windowHeight" [ngClass]="{'visible': hamburgerMenuClicked }">
         <ul>
             <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
         </ul>
