--- a/DynamicDashboardD3/src/app/app.component.html
+++ b/DynamicDashboardD3/src/app/app.component.html
@@ -12,9 +12,14 @@
         <div class="hamburger-menu" (click)="hamburgerMenuClicked = !hamburgerMenuClicked"><span class="fa fa-bars"></span></div>
     </div>
     <div class="header-menu-sm" [style.height.px]="windowHeight" [ngClass]="{'visible': hamburgerMenuClicked }">
-        <ul>
-            <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
-        </ul>
+        <div class="close-tab">
+            <div class="close-button" (click)="hamburgerMenuClicked = !hamburgerMenuClicked">&rsaquo;&rsaquo;</div>
+        </div>        
+        <div>
+            <ul>
+                <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" (click)="selectItem(item.id)"><a>{{item.name}}</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="app-body" [style.height.px]="appBodyHeight">
