--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<p>
-  dashboard works!
-</p>
+<div class="dashboard">
+  <ng-template ngFor let-widget [ngForOf]="widgets">
+    <div [id]="'widget-' + widget.id" widget-host></div>
+  </ng-template>
+</div>
