dynamic widgets are loading

--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard">
-  <ng-template ngFor let-widget [ngForOf]="widgets">
-    <div [id]="'widget-' + widget.id" widget-host></div>
+  <ng-template ngFor let-widget [ngForOf]="widgets">    
+    <widget-host></widget-host>
   </ng-template>
 </div>
