--- a/DynamicDashboardD3/src/app/app.component.html
+++ b/DynamicDashboardD3/src/app/app.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="header-menu-lg">
             <ul>
-                <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}" ><a (click)="selectMenuItem(item.id)" routerLink="{{item.path}}">{{item.name}}</a></li>
+                <li *ngFor="let item of navItems" [ngClass]="{'selected':isSelectedNavItem(item.id)}" ><a (click)="selectNavItem(item.id)" routerLink="{{item.path}}">{{item.name}}</a></li>
             </ul>
         </div>
         <div class="hamburger-menu" (click)="hamburgerMenuClicked = !hamburgerMenuClicked"><span class="fa fa-bars"></span></div>
@@ -17,7 +17,7 @@
         </div>        
         <div>
             <ul>
-                <li *ngFor="let item of menuItems" [ngClass]="{'selected':isSelected(item.id)}"><a  (click)="selectMenuItem(item.id)" routerLink="{{item.path}}">{{item.name}}</a></li>
+                <li *ngFor="let item of navItems" [ngClass]="{'selected':isSelectedNavItem(item.id)}"><a  (click)="selectNavItem(item.id)" routerLink="{{item.path}}">{{item.name}}</a></li>
             </ul>
         </div>
     </div>
