--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard">
+<div class="dashboard" dd-packery item-class-selector=".widget">
   <ng-template ngFor let-widget [ngForOf]="widgets">    
     <widget-host></widget-host>
   </ng-template>
