--- a/DynamicDashboardD3/src/styles.scss
+++ b/DynamicDashboardD3/src/styles.scss
@@ -1,4 +1,5 @@
 /*imports*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
 @import './variables.scss';
@@ -6,6 +7,6 @@
 /*global styles*/
 body{    
     background-color: $blueish-white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
