--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
@@ -1,3 +1,5 @@
-<div class="widget chart-widget" dd-draggabilly>
-  Chart Widget
+<div dd-draggabilly class="widget chart-widget">  
+  <svg #chartWidget>
+    Chart Widget
+  </svg>
 </div>
