--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
-<div class="dashboard" dd-packery>
-  <ng-template ngFor let-widget [ngForOf]="widgets">    
-    <widget-host></widget-host>
-  </ng-template>
+<div class="dashboard-container row">
+  <div class="side-bar col-sm-2">
+  </div>
+  <div class="dashboard col-sm-10" dd-packery>
+    <ng-template ngFor let-widget [ngForOf]="widgets">
+      <widget-host></widget-host>
+    </ng-template>
+  </div>
 </div>
