--- a/DynamicDashboardD3/src/styles.scss
+++ b/DynamicDashboardD3/src/styles.scss
@@ -1,12 +1,13 @@
 /*imports*/
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
-@import './variables.scss';
+@import './sass/variables.scss';
 
 /*global styles*/
-body{    
-    background-color: $blueish-white;
+html body{    
+    background-color: #1C2736;
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
@@ -16,5 +17,5 @@ body{
   outline-offset: -6px;
   /* transition position changing */
   -webkit-transition: -webkit-transform 0.2s;
-          transition: transform 0.2s;
+        transition: transform 0.2s;
 }
